# Pawsword

./: main.py  pyproject.toml
Pawsword/: __init__.py  control.py  encryption.py  paths.py  storage.py
Pawsword/cli/: command_line.py
Pawsword/ui/: __init__.py  app.py
Pawsword/ui/frames/: login_f.py  vault_f.py
ui/: app.py
