[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pawsword"
version = "0.2.0"
description = "A simple encrypted password manager"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ben Elliott", email = "you@example.com" }
]

dependencies = [
    "cryptography>=46.0.3",
    "customtkinter>=5.2.2",
    "platformdirs>=4.5.1",
]

[project.scripts]
pawsword = "Pawsword.ui.app:main"